bugfix/fix-codes